--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ body {
 .puzzle-board { 
 	width:600px; 
 	background-image: url('../images/backGround0.jpg');
+    background-image: url('../images/backGround1.jpg');
 	background-repeat: no-repeat;
 	display: flex;
 	flex-wrap: wrap;
