--- a/css/main.css
+++ b/css/main.css
@@ -47,13 +47,19 @@ body {
 .puzzle-board { 
 	width:600px; 
 	background-image: url('../images/backGround0.jpg');
-    background-image: url('../images/backGround1.jpg');
 	background-repeat: no-repeat;
 	display: flex;
 	flex-wrap: wrap;
 	margin-bottom: 65px;
 }
-
+.puzzle-board1 { 
+	width:600px; 
+	background-image: url('../images/backGround1.jpg');
+	background-repeat: no-repeat;
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 65px;
+}
 .puzzle-image {
 	width: 40%;
 	display: block;
